prettifys advanced index.html

--- a/advanced/bootstrap-a1.html
+++ b/advanced/bootstrap-a1.html
@@ -3,41 +3,43 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <link rel="stylesheet" href="">
+    <title>Advanced Exercise</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 
 <body>
     <div class="container">
         <div class="row bg-danger justify-content-between py-2 my-2">
-            <div class="col-lg-1 col-md-2"><div class="bg-white p-2">Lorem</div>
+            <div class="col-lg-1 col-md-2">
+                <div class="bg-white p-2">Lorem</div>
 			</div>
-            <div class="col-lg-1 col-md-2"><div class="bg-white p-2">Lorem</div>
+            <div class="col-lg-1 col-md-2">
+                <div class="bg-white p-2">Lorem</div>
 			</div>
         </div>
         <div class="row  bg-warning justify-content-between py-2 my-2">
-            <div class="col-lg-2"><div class="bg-white p-2">Lorem</div>
+            <div class="col-lg-2">
+                <div class="bg-white p-2">Lorem</div>
             </div>
-            <div class="col-lg-2"><div class="bg-white p-2">Lorem</div>
+            <div class="col-lg-2">
+                <div class="bg-white p-2">Lorem</div>
             </div>
-            <div class="col-lg-2"><div class="bg-white p-2">Lorem</div>
+            <div class="col-lg-2">
+                <div class="bg-white p-2">Lorem</div>
             </div>
         </div>
-<div class="row bg-secondary justify-content-between py-2 my-2">
-			<div class="col-lg-2"><div class="p-2 bg-white">Lorem</div>
+        <div class="row bg-secondary justify-content-between py-2 my-2">
+			<div class="col-lg-2">
+                <div class="p-2 bg-white">Lorem</div>
 			</div>
-			<div class="col-lg-6"><div class="p-2 bg-white">Lorem</div>
+			<div class="col-lg-6">
+                <div class="p-2 bg-white">Lorem</div>
 			</div>
-			<div class="col-lg-3 offset-lg-1"><div class="p-2 bg-white">Lorem</div>
+			<div class="col-lg-3 offset-lg-1">
+                <div class="p-2 bg-white">Lorem</div>
 			</div>
 		</div>
-
-               
-            </div>
-        </div>
     </div>
 </body>
-
 </html>
